--- a/PyDemo/page/user/test_v2DocumentAddByFile.yaml
+++ b/PyDemo/page/user/test_v2DocumentAddByFile.yaml
@@ -25,23 +25,23 @@ test_case:
       check_type: check_json
       expected_code: 200
       expected_result:
-        code: 0
-        message: SUCCESS
-  - summary: v2DocumentAddByFile
-    describe: test_v2DocumentAddByFile
-    title: 01:上传多分文件
-    premise: false
-    file:
-      - file 参数合同回归测试（双方）.pdf
-      - file 参数合同回归测试（双方）.pdf
-    parameter:
-      contractId: ${result_id}
-      bizId: ${result_bizId}
-      title: pdf合同文件添加
-      fileSuffix: pdf
-    check_body:
-      check_type: check_json
-      expected_code: 200
-      expected_result:
-        code: 0
-        message: SUCCESS
+        - ["eq", "code", 0]
+        - ["eq", "$..message", "SUCCESS"]
+#  - summary: v2DocumentAddByFile
+#    describe: test_v2DocumentAddByFile
+#    title: 01:上传多分文件
+#    premise: false
+#    file:
+#      - file 参数合同回归测试（双方）.pdf
+#      - file 参数合同回归测试（双方）.pdf
+#    parameter:
+#      contractId: ${result_id}
+#      bizId: ${result_bizId}
+#      title: pdf合同文件添加
+#      fileSuffix: pdf
+#    check_body:
+#      check_type: check_json
+#      expected_code: 200
+#      expected_result:
+#        code: 0
+#        message: SUCCESS
