--- a/PyDemo/page/contract/test_ContractDownload.yaml
+++ b/PyDemo/page/contract/test_ContractDownload.yaml
@@ -14,13 +14,13 @@ test_case:
   - summary: ContractDownload
     describe: test_ContractDownload
     title: 00:通过bizId下载草稿合同
-    premise: /commonCase.yaml ContractCreateByCategory 0  # commonCase文件内容作为前置使用范例
+    premise: /contract/test_ContractCreateByCategory.yaml _ 0
     file: false
     download_name: 下载合同.zip    # 下载文件另存为
     parameter:
-      bizId: ${bizId}
+#      bizId: ${bizId}
     check_body:
       check_type: check_code
-      expected_code: 200
+      expected_code: 500
       expected_result:
-        - 200
+        - 500
