--- a/config/runConfig.yml
+++ b/config/runConfig.yml
@@ -13,7 +13,7 @@ auto_switch: 1
 scan_dir: ""
 
 # 使用模糊匹配测试用例（空则匹配所有）
-pattern: ""
+pattern: "MemberRegister"
 
 # 执行并发线程数（0表示不开启）
 process: 0
@@ -27,13 +27,20 @@ maxfail: 200
 # 接口调用间隔时间（s）
 interval: 1
 
-# 跳过用例集  ["xxx","yyy"]
-skip: []
+# jenkins地址
+Jenkins_conf:
+  url: http://127.0.0.1:8080
+  username: admin
+  password: '123456as'
+job_name: job/private_apiTesting/
 
+# 钉钉配置
+dd_url: fsdfsfsdfdds    #webhook
 
-# 测试结果校验方式说明（共5种方式）：
+# 测试结果校验方式说明（共6种方式）：
 # no_check：不做任何校验
 # check_code：仅校验接口返回码code
 # check_json：校验接口返回码code，并进行json格式比较返回结果（默认方式）
 # entirely_check：校验接口返回码code，并进行完整比较返回结果
 # regular_check：校验接口返回码code，并进行正则匹配返回结果
+# check_db: 校验数据库
